--- a/src/SettingNetworkForm.ui
+++ b/src/SettingNetworkForm.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout_2">
    <property name="leftMargin">
     <number>0</number>
    </property>
@@ -27,40 +27,42 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="QRadioButton" name="radioButton_no_proxy">
-     <property name="text">
-      <string>No Proxy</string>
+    <widget class="QGroupBox" name="groupBox">
+     <property name="title">
+      <string>Proxy Server</string>
      </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QRadioButton" name="radioButton_auto_detect">
-     <property name="text">
-      <string>Auto Detect</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QRadioButton" name="radioButton_manual">
-     <property name="text">
-      <string>Manual</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QLineEdit" name="lineEdit_proxy_server"/>
-   </item>
-   <item>
-    <widget class="Line" name="line">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QRadioButton" name="radioButton_no_proxy">
+        <property name="text">
+         <string>No Proxy</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="radioButton_auto_detect">
+        <property name="text">
+         <string>Auto Detect</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="radioButton_manual">
+        <property name="text">
+         <string>Manual</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="lineEdit_proxy_server"/>
+      </item>
+     </layout>
     </widget>
    </item>
    <item>
     <widget class="QCheckBox" name="checkBox_get_committer_icon">
      <property name="text">
-      <string>Get committer's icon</string>
+      <string>Get committer's icon from gravatar.com</string>
      </property>
     </widget>
    </item>
