リモート切り替え機能（仮）

--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -436,7 +436,7 @@
           </layout>
          </item>
          <item>
-          <widget class="QComboBox" name="comboBox"/>
+          <widget class="QComboBox" name="comboBox_remote"/>
          </item>
         </layout>
        </item>
